--- a/index.html
+++ b/index.html
@@ -52,7 +52,20 @@
       <div class="skill-card">Git & GitHub</div>
     </div>
   </section>
-
+<!-- ===== Resume Section ===== -->
+<section id="resume" class="section fade-in">
+  <h2>Resume</h2>
+  <p>I am currently pursuing <strong>B.Tech CSE</strong> at <strong>Guru Jambheshwar University, Hisar</strong>.</p>
+  
+  <h3>Experience</h3>
+  <div class="resume-experience">
+    <div class="resume-card">
+      <h4>Front-End Developer Intern</h4>
+      <p>CodeAlpha</p>
+      <p>Created interactive projects like Image Gallery, Calculator, and Portfolio Website using HTML, CSS, and JavaScript.</p>
+    </div>
+    <!-- You can add more experiences here -->
+  </div>
   <!-- ===== Projects Section ===== -->
   <section id="projects" class="section fade-in">
     <h2>Projects</h2>
@@ -100,3 +113,4 @@
   <script src="script.js"></script>
 </body>
 </html>
+
